tests/ir/valid/control_flow.vit
space tests/ir/valid/control_flow

proc main() -> int {
  let x: int = 1;
  if x > 0 { give 1; }
  give 0;
}
