tests/ir/invalid/bad_cfg.vit
space tests/ir/invalid/bad_cfg

proc main() -> int {
  if true { give 1; }
}
